<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">

    <TextView
        android:id="@+id/tvNomeEscolhido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvMensagem"
        app:layout_constraintTop_toBottomOf="@+id/tvMensagem" />

    <TextView
        android:id="@+id/tvTimeEscolhido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvNomeEscolhido"
        app:layout_constraintStart_toStartOf="@+id/tvNomeEscolhido"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeEscolhido" />

    <TextView
        android:id="@+id/tvMensagem"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtimeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvNomeUsuario"
        app:layout_constraintStart_toStartOf="@+id/tvMensagem"
        app:layout_constraintTop_toBottomOf="@+id/tvMensagem" />

    <TextView
        android:id="@+id/tvTimeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvTimeUsuario"
        app:layout_constraintEnd_toEndOf="@+id/tvtimeUsuario"
        app:layout_constraintStart_toStartOf="@+id/tvtimeUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvtimeUsuario" />
</android.support.constraint.ConstraintLayout>